--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Quiz</title>
     <link rel="stylesheet" href="style.css" />
+    <script src="db.js"></script>
+    <script src="script.js"></script>
+
+    <!-- Bootstrap file -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -16,8 +20,37 @@
       integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
       crossorigin="anonymous"
     ></script>
-    <script src="script.js"></script>
   </head>
   <body>
+    <nav class="navbar bg-body-tertiary">
+      <div class="container-fluid">
+        <span class="navbar-brand mb-0 h1">QuizApp</span>
+      </div>
+    </nav>
+    <div class="container">
+      <div class="card quiz-card">
+        <img src="./assets/img/Group 5.png" class="card-img-top" alt="..." />
+        <div class="card-body">
+          <h5 class="card-title">Frage</h5>
+          <div class="card mb-2">
+            <div class="card-body">Antwort 1</div>
+          </div>
+          <div class="card mb-2">
+            <div class="card-body">Antwort 2</div>
+          </div>
+          <div class="card mb-2">
+            <div class="card-body">Antwort 3</div>
+          </div>
+          <div class="card mb-2">
+            <div class="card-body">Antwort 4</div>
+          </div>
+
+          <div class="question-footer">
+            <span> <b>1</b> von <b>5</b> Fragen </span>
+            <button class="btn btn-outline-primary">Nächste Frage</button>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
