render questions from db and hightlight answers based on correctness

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       crossorigin="anonymous"
     ></script>
   </head>
-  <body>
+  <body onload="init()">
     <nav class="navbar bg-body-tertiary">
       <div class="container-fluid">
         <span class="navbar-brand mb-0 h1">QuizApp</span>
@@ -31,23 +31,28 @@
       <div class="card quiz-card">
         <img src="./assets/img/Group 5.png" class="card-img-top" alt="..." />
         <div class="card-body">
-          <h5 class="card-title">Frage</h5>
+          <h5 class="card-title" id="question-text">Frage</h5>
           <div class="card mb-2">
-            <div class="card-body">Antwort 1</div>
+            <div class="card-body answer-card" id="answer-1" onclick="checkAnswer(1)">Antwort 1</div>
           </div>
           <div class="card mb-2">
-            <div class="card-body">Antwort 2</div>
+            <div class="card-body answer-card" id="answer-2" onclick="checkAnswer(2)">Antwort 2</div>
           </div>
           <div class="card mb-2">
-            <div class="card-body">Antwort 3</div>
+            <div class="card-body answer-card" id="answer-3" onclick="checkAnswer(3)">Antwort 3</div>
           </div>
           <div class="card mb-2">
-            <div class="card-body">Antwort 4</div>
+            <div class="card-body answer-card" id="answer-4" onclick="checkAnswer(4)">Antwort 4</div>
           </div>
 
           <div class="question-footer">
-            <span> <b>1</b> von <b>5</b> Fragen </span>
-            <button class="btn btn-outline-primary">Nächste Frage</button>
+            <span>
+              <b id="current-question">1</b> von <b id="question-number">5</b>
+              Fragen
+            </span>
+            <button class="btn btn-outline-primary" onclick="nextQuestion()">
+              Nächste Frage
+            </button>
           </div>
         </div>
       </div>
